--- a/quiz.html
+++ b/quiz.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="quiz">
     <!-- الحاوية الرئيسية -->
     <div class="container">
         <!-- شاشة الاختبار -->
@@ -23,7 +23,7 @@
                         <div class="progress-fill" id="progress-fill" style="width: 0%"></div>
                     </div>
                     <div class="progress-text">
-                        <span id="current-step">1</span> من <span id="total-steps">6</span>
+                        <span id="current-step">1</span> من <span id="total-steps">5</span>
                     </div>
                 </div>
 
@@ -57,13 +57,6 @@
                         </div>
                     </div>
 
-                    <div class="question-group">
-                        <label>تبي نكهات زي فانيليا أو شوكولاتة وغيرها؟</label>
-                        <div class="options-container">
-                            <button type="button" class="option-btn" data-value="نعم" data-question="flavors">نعم</button>
-                            <button type="button" class="option-btn" data-value="لا" data-question="flavors">لا</button>
-                        </div>
-                    </div>
 
                     <div class="question-group">
                         <label>تبي قهوتك تكون مختصة أو أي نوع عادي؟</label>
