--- a/result.html
+++ b/result.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>فنجان ديسكفري - نتيجة المشروب</title>
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="S02iTM7f_400x400.png">
+    <link rel="shortcut icon" type="image/png" href="S02iTM7f_400x400.png">
+    
     <!-- ملفات التصميم -->
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
