--- a/welcome.html
+++ b/welcome.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>فنجان ديسكفري - اكتشف مشروبك المفضل</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="S02iTM7f_400x400.png">
+    <link rel="shortcut icon" type="image/png" href="S02iTM7f_400x400.png">
     
     <!-- ملفات التصميم -->
     <link rel="stylesheet" href="style.css">
