--- a/quiz.html
+++ b/quiz.html
@@ -84,10 +84,10 @@
                 <!-- أزرار التنقل بالأسهم -->
                 <div class="simple-nav">
                     <button type="button" class="nav-btn" id="back-btn" aria-label="السابق">
-                        <span>←</span>
+                        <span>›</span>
                     </button>
                     <button type="button" class="nav-btn primary" id="next-btn" aria-label="التالي">
-                        <span>→</span>
+                        <span>‹</span>
                     </button>
                 </div>
 
